--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,12 @@
 {
   "manifest_version": 2,
   "name": "MurdochOverlay",
-  "version": "1.0",
-
+  "version": "1.3",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{1b0ca11e-9c26-43d1-8b73-dbaf6b71022c}"
+    }
+  },
   "description": "Creates an overlay over Murdoch owned \"news\" sites.",
 
   "icons": {
