--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 2,
   "name": "MurdochOverlay",
-  "version": "1.3",
+  "version": "1.4",
   "browser_specific_settings": {
     "gecko": {
-      "id": "{1b0ca11e-9c26-43d1-8b73-dbaf6b71022c}"
+      "id": "{c25509f0-d3ca-4a85-8a91-a7315079dd0d}"
     }
   },
-  "description": "Creates an overlay over Murdoch owned \"news\" sites.",
+  "description": "Adds an overlay over Murdoch \"news\".",
 
   "icons": {
     "48": "icons/icon-48.png",
@@ -17,16 +17,27 @@
   "content_scripts": [
     {
       "matches": [
+        "*://*.realestate.com.au/*",
+        "*://*.vogue.com.au/*",
+        "*://*.gq.com.au/*",
+        "*://*.taste.com.au/*",
+        "*://*.whimn.com.au/*",
+        "*://*.bodyandsoul.com.au/*",
+        "*://*.kidspot.com.au/*",
+        "*://*.delicious.com.au/*",
+        "*://*.bigrigs.com.au/*",
+        "*://*.punters.com.au/*",
+        "*://*.odds.com.au/*",
+        "*://*.racenet.com.au/*",
+        "*://*.broncos.com.au/*",
         "*://*.fijitimes.com/*",
         "*://*.goldcoastbulletin.com.au/*",
         "*://*.weeklytimesnow.com.au/*",
         "*://*.themercury.com.au/*",
         "*://*.couriermail.com.au/*",
         "*://*.theaustralian.com.au/*",
-        "*://*.adelaidenow.com.au/*",
         "*://*.heraldsun.com.au/*",
         "*://*.postcourier.com.pg/*",
-        "*://*.ntnews.com.au/*",
         "*://*.newsphotos.com.au/*",
         "*://*.newscorpaustralia.com/*",
         "*://*.newspix.com.au/*",
