--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,15 @@
     "96": "icons/icon-96.png"
   },
 
+  "options_ui": {
+    "page": "options.html",
+    "browser_style": true,
+    "chrome_style": true,
+    "open_in_tab": false
+  },
+  
+  "permissions": ["storage"],
+
   "content_scripts": [
     {
       "matches": [
