updated list of nine properties

--- a/manifest.json
+++ b/manifest.json
@@ -161,7 +161,34 @@
       "matches": [
         "*://*.nine.com.au/*",
         "*://*.9news.com.au/*",
-        "*://*.pedestrian.tv/*"
+        "*://*.nineforbrands.com.au/*",
+        "*://*.ninemsn.com.au/*",
+        "*://*.heraldsub.com.au/*",
+        "*://*.theage.com.au/*",
+        "*://*.afr.com.au/*",
+        "*://*.brisbanetimes.com.au/*",
+        "*://*.watoday.com.au/*",
+        "bossmagazine.com/"
+        "*://*.drive.com.au/*",
+        "*://*.yourtv.com.au/*",
+        "*://*.domain.com.au/*",
+        "*://*.essentialbaby.com.au/*",
+        "*://*.essentialkids.com.au/*",
+        "*://*.goodfoodmonth.com.au/*",
+        "*://*.goodfood.com.au/*",
+        "*://*.gfgc.com.au/*",
+        "*://*.futurewomen.com/*",
+        "*://*.openaircinemas.com.au/*",
+        "*://*.rsvp.com.au/*",
+        "*://*.traveller.com.au/*",
+        "*://*.pedestrian.tv/*",
+        "*://*.pedestriangroup.com.au/*",
+        "*://*.kotaku.com.au/*",
+        "*://*.lifehacker.com.au/*",
+        "*://*.gizmodo.com.au/*",
+        "*://*.businessinsider.com.au/*",
+        "*://*.vice.com/*",
+        "*://*.refinery29.com/*"
       ],
       "js": ["content-nine.js"],
       "css": ["content.css"]
